...
    <string name="pref_notifications">Notifications</string>
    <string name="nav_feedback">Send feedback</string>

    <!-- Search -->
    <string name="search_label">WatchNext</string>
    <string name="search_hint">Search The MovieDb</string>
    <string name="menu_search">Search</string>
    <string name="settings_description">Search for latest movies and series</string>
    <string name="search_query_hint">Search The MovieDb</string>
    <string name="movie">MOVIE</string>
    <string name="tv_series">TV SERIES</string>
    <string name="no_results">No results found</string>
    <string name="search_empty_text_movie">Please use the search to look up for a movie.  Powered by THE MOVIE DB</string>
    <string name="search_empty_text_serie">Please use the search to look up for a serie.  Powered by THE MOVIE DB</string>
    <string name="search">web search</string>

    <!-- Sort Menu -->
    <string name="sort_by">Sort by</string>
    <string name="sort_menu_title">Title</string>
    <string name="sort_menu_highest_rated">Highest Rated</string>
    <string name="sort_menu_lowest_rated">Lowest Rated</string>
...
    <string name="biography_not_available">There is no biography available for now. That\'s all we know.</string>
    <string name="cast_text_view">Cast</string>
    <string name="more_text_view">more</string>
    <string name="crew_text_view">Crew</string>

    <!-- Share -->
    <string name="menu_share">Share</string>
    <string name="feedback">"%1s %2s, Android %3s  Please send your feedback below this line  "</string>

    <!-- Videos -->
    <string name="videos_empty_text">No videos found</string>
    <string name="videos_text_view_button">Videos</string>

...
    <string name="action_share_content_description" translatable="false">Click to share</string>
    <string name="sort_title_content_description" translatable="false">Sort By Title</string>
    <string name="sort_highest_rated_content_description" translatable="false">Sort By Highest Rated</string>
    <string name="sort_lowest_rated_content_description" translatable="false">Sort By Lowest Rated</string>
    <string name="navigation_back_content_description" translatable="false">Go back</string>
    <string name="movie_poster_content_description" translatable="false">Movie poster</string>
    <string name="star_image_content_description" translatable="false">Star image</string>
    <string name="nav_icon_content_description" translatable="false">Application icon</string>
    <string name="play_circle_content_description" translatable="false">Circle play image</string>
    <string name="you_tube_image_content_description" translatable="false">YouTube video poster</string>
    <string name="link_image_content_description" translatable="false">Link image</string>
    <string name="person_content_description" translatable="false">Person photo</string>
    <string name="serie_content_description" translatable="false">Serie poster</string>
...
