<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/list_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

                <android.support.v7.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionSearch|flagNoExtractUi" />

                <View
                    android:id="@+id/scrim"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0"
                    android:background="@android:color/transparent"/>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:visibility="visible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/search_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/search_card_view_margin"
                android:layout_marginLeft="@dimen/search_card_view_margin"
                android:layout_marginRight="@dimen/search_card_view_margin"
                android:layout_marginStart="@dimen/search_card_view_margin"
                android:clipToPadding="false"
                android:divider="@null"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </android.support.design.widget.CoordinatorLayout>

    <include layout="@layout/nav_view" />

</android.support.v4.widget.DrawerLayout>