<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/icon_share_white"
        android:orderInCategory="1"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom" />
</menu>